# me507_lab_3

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: main.yaml
docs/: .rustc_info.json  .rustdoc_fingerprint.json
docs/thumbv7em-none-eabihf/doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
docs/thumbv7em-none-eabihf/doc/me507_lab_3/: all.html  fn.USART1.html  fn.__cortex_m_rt_main.html  fn.__embassy_main.html  fn.__make_static.html  fn.blinky.html  fn.disable_motor.html  fn.enable_motor.html  fn.print_durations.html  fn.remote_ch_1.html  fn.remote_ch_2.html  fn.set_motor_duty.html  index.html  sidebar-items.js  static.ALLOCATOR.html  static.ARENA.html  static.DURATION_A.html  static.DURATION_B.html  static.DUTY_A.html  static.DUTY_B.html  static.LED_SPEED_SHARE.html  struct.Irqs.html
docs/thumbv7em-none-eabihf/doc/search.desc/me507_lab_3/: me507_lab_3-desc-0-.js
docs/thumbv7em-none-eabihf/doc/src/me507_lab_3/: main.rs.html
docs/thumbv7em-none-eabihf/doc/trait.impl/core/clone/: trait.Clone.js
docs/thumbv7em-none-eabihf/doc/trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
docs/thumbv7em-none-eabihf/doc/trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/thumbv7em-none-eabihf/doc/trait.impl/embassy_stm32/_generated/interrupt/typelevel/: trait.Binding.js
src/: main.rs
