[[bin]] # prevent "Can't find crate for 'test'" error
name = "me507_lab_3"
test = false
bench = false

[package]
name = "me507_lab_3"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = "s"
incremental = false
codegen-units = 1
# note: debug = true is okay - debuginfo isn't flashed to the device!
debug = true
#strip = true

[profile.dev]
lto = "thin"
opt-level = "s"
incremental = true
# note: debug = true is okay - debuginfo isn't flashed to the device!
debug = true
panic = "abort"

[dependencies]
# Change stm32f411ce to your chip name, if necessary.
embassy-stm32 = { version = "0.1.0", features = ["defmt", "stm32f411ce", "unstable-pac", "memory-x", "time-driver-any", "exti", "chrono"]  }
embassy-sync = { version = "0.5.0", features = ["defmt"] }
embassy-executor = { version = "0.5.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
#embassy-usb = { version = "0.1.0", features = ["defmt" ] }
#embassy-net = { version = "0.4.0", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet", ] }

defmt = "0.3.6"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "1.0.0"
embedded-io = { version = "0.6.0" }
embedded-io-async = { version = "0.6.1" }
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.8", default-features = false }
nb = "1.0.0"
embedded-storage = "0.3.1"
#micromath = "2.0.0"
#usbd-hid = "0.7.0"
#static_cell = "2"
chrono = { version = "^0.4", default-features = false}
atomic_float = { version = "0.1.0"}
#panic-halt = "0.2.0"
regex-automata = { version = "0.4.6", default-features = false, features = ["meta"] }
talc = "4.4.1"
spin = "0.9.8"

